# RelicsTracker

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  conanfile.txt
RelicsTracker/: CMakeLists.txt  RelicsTracker.cpp
conan-build/: conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json
include/: ComputationHandler.h  Enums.h  Object.h  Prime.h  Relic.h  RelicsTracker.h  RequestHandler.h  Sorters.h  UIHandler.h
src/: ComputationHandler.cpp  RequestHandler.cpp  UIHandler.cpp  main.cpp
